# Neuron

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESKTOP-PLAN.md  FEATURE-MATRIX.md  HOMESERVER-PLAN.md  NOTICE  OPEN-QUESTIONS.md  PLAN.md  README.md
.github/workflows/: desktop-installers.yml  docker-image.yml  neuron-ci.yml
docs/: architecture.md  configuration.md  deployment.md  desktop.md  feature-analysis.md
neuron/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  PROGRESS.md  README.md  docker-compose.caddy.yml  docker-compose.yml  pyproject.toml
neuron/assets/brand/: README.md
neuron/deploy/compose/: .env.example  README.md  docker-compose.yml
neuron/docs/: deploy.md
neuron/packaging/: AppxManifest.template.xml  app_entry.py  entitlements.plist  macos_notarize.sh  macos_sign.sh  make_appimage.sh  make_brand_assets.py  make_dmg.sh  make_icns.py  make_msix.ps1  make_msix_assets.py  neuron.iss  neuron_desktop.spec
neuron/scripts/: dev-setup.sh
neuron/src/neuron_auditor/: __init__.py  __main__.py  config.py  core.py  sinks.py  state.py
neuron/src/neuron_console/: __init__.py  app.py  config.py  deps.py  passkeys.py  qr.py  security.py
neuron/src/neuron_console/static/: style.css  webauthn.js
neuron/src/neuron_console/templates/: base.html  dashboard.html  error.html  login.html  passkeys.html  redact_status.html  registration_tokens.html  reports.html  room_delete.html  room_delete_status.html  room_detail.html  rooms.html  server_notice.html  supervision.html  user_deactivate.html  user_detail.html  user_new.html  users.html
neuron/src/neuron_core/: __init__.py  _http.py  admin_client.py  branding.py  config.py  csapi_client.py  errors.py  logging.py  qr.py  security.py
neuron/src/neuron_crypto/: __init__.py  base.py  cross_signing.py  manager.py  megolm.py  olm_device.py  signing.py
neuron/src/neuron_desktop/: __init__.py  __main__.py  cli.py  config.py  icon.py  paths.py  process.py  settings_window.py  setup.py  supervisor.py  tray.py
neuron/src/neuron_server/: __init__.py  __main__.py  app.py  clock.py  config.py  doctor.py  errors.py  metrics.py  passkeys.py  proxy.py  pushrules.py  ratelimit.py  security.py  spec.py  typing_state.py
neuron/src/neuron_server/admin/: __init__.py  service.py
neuron/src/neuron_server/api/: __init__.py  client_auth.py  client_directory.py  client_keys.py  client_media.py  client_misc.py  client_push.py  client_pushers.py  client_room_directory.py  client_room_keys.py  client_rooms.py  client_sliding_sync.py  client_sync.py  console.py  deps.py  federation_backfill.py  federation_directory.py  federation_e2ee.py  federation_invite.py  federation_join.py  federation_keys.py  federation_leave.py  federation_media.py  federation_query.py  federation_read.py  federation_transactions.py  synapse_admin.py
neuron/src/neuron_server/auth/: __init__.py  ids.py  oidc.py  passwords.py  service.py  uia.py
neuron/src/neuron_server/crypto/: __init__.py  event_hashing.py  signing.py
neuron/src/neuron_server/e2ee/: __init__.py  service.py
neuron/src/neuron_server/federation/: __init__.py  auth.py  client.py  directory.py  discovery.py  flusher.py  membership.py  profiles.py  request.py  sender.py  validation.py
neuron/src/neuron_server/keys/: __init__.py  resolver.py  service.py
neuron/src/neuron_server/media/: __init__.py  multipart.py  service.py  store.py  thumbnails.py
neuron/src/neuron_server/push/: __init__.py  evaluator.py  sender.py
neuron/src/neuron_server/rooms/: __init__.py  authrules.py  events.py  service.py  state_resolution.py  versions.py
neuron/src/neuron_server/storage/: __init__.py  accounts.py  admin.py  database.py  destinations.py  directory.py  e2ee.py  federation.py  invites.py  keybackup.py  media.py  media_thumbnails.py  metadata.py  migrations.py  notifications.py  outbox.py  postgres.py  push.py  pushers.py  receipts.py  remote_media.py  rooms.py  sqlite.py  transactions.py  typing.py  uia.py  userdata.py
neuron/src/neuron_server/sync/: __init__.py  broadcast.py  notifier.py  service.py  sliding.py  transport.py
neuron/src/neuron_supervisor/: __init__.py  __main__.py  config.py  core.py
neuron/tests/integration/: test_postgres.py  test_smoke.py
neuron/tests/neuron_auditor/: test_auditor.py  test_main.py  test_sinks.py
neuron/tests/neuron_console/: test_app.py  test_passkeys.py
neuron/tests/neuron_core/: test_admin_client.py  test_config.py  test_csapi_client.py  test_logging.py
neuron/tests/neuron_crypto/: test_cross_signing.py  test_megolm.py  test_olm_device.py
neuron/tests/neuron_desktop/: test_cli.py  test_settings_window.py  test_setup.py  test_tray.py
neuron/tests/neuron_server/: test_account_management.py  test_admin_compat.py  test_auditor_compat.py  test_auth.py  test_branding.py  test_client_directory.py  test_client_misc.py  test_console.py  test_console_federation.py  test_console_passkeys.py  test_console_settings.py  test_core_client_compat.py  test_crypto_signing.py  test_doctor.py  test_e2ee_pipeline.py  test_event_hashing.py  test_event_signing_integration.py  test_federation_auth.py  test_federation_backfill.py  test_federation_chunking.py  test_federation_dedup.py  test_federation_e2ee.py  test_federation_edu_queue.py  test_federation_flusher.py  test_federation_hub_fanout.py  test_federation_invite.py  test_federation_join.py  test_federation_join_outbound.py  test_federation_keyresolver.py  test_federation_keys.py  test_federation_leave.py  test_federation_messages.py  test_federation_moderation.py  test_federation_query_profile.py  test_federation_read.py  test_federation_receipts.py  test_federation_retry.py  test_federation_transactions.py  test_federation_typing.py  test_federation_validation.py  (+30 more)
neuron/tests/neuron_supervisor/: test_supervisor.py
