# Neuron — Python project definition.
#
# This is the project file for ALL Neuron services and shared libraries: the
# Matrix homeserver (`neuron_server`) and the operator tooling (admin console,
# bots, crypto, desktop app).
#
# Layout uses the conventional "src/" pattern: importable packages live under
# src/ (e.g. src/neuron_core). Tests live under tests/.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuron"
version = "0.0.15"
description = "Neuron — an all-in-one, self-hosted Matrix platform (homeserver + operator tooling)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Neuron contributors" }]

# Runtime dependencies shared across services. Each new service may add its own
# extras later (e.g. matrix-nio for the bots, fastapi for the web services); the
# shared library (neuron_core) only needs an HTTP client + config/validation.
dependencies = [
    "httpx>=0.27,<1.0",          # modern async HTTP client used to call the homeserver
    "pydantic>=2.7,<3.0",        # data validation + typed models
    "pydantic-settings>=2.3,<3.0", # load configuration from env vars / .env
    "PyYAML>=6.0",               # read optional YAML config files
]

# Console commands installed on `pip install`/`pipx install`. `neuron-server`
# runs the homeserver (needs the `server` extra); this is what makes Neuron an
# installable program on macOS/Windows/Linux (see docs/desktop.md).
[project.scripts]
neuron-server = "neuron_server.__main__:main"
neuron-desktop = "neuron_desktop.cli:main"

[project.optional-dependencies]
# The admin console service (FastAPI + server-rendered templates).
# Install with:  pip install -e ".[console]"
console = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30",   # ASGI server used to run the app
    "jinja2>=3.1",               # HTML templating
    "python-multipart>=0.0.9",   # parse HTML form submissions (login form)
    "itsdangerous>=2.2",         # signs the session cookie (Starlette SessionMiddleware)
    "httpx>=0.27",               # also used by Starlette's TestClient
    "segno>=1.6",                # pure-Python QR codes for shareable invite links
    "webauthn>=2.0",             # passkey (WebAuthn) login for the console
]

# The audit bot's optional S3 sink.
# Install with:  pip install -e ".[auditor]"
auditor = [
    "boto3>=1.34",               # S3-compatible object storage client
]

# S3-compatible object storage for the homeserver's media repository (multi-host
# deployments). Lazy-imported, so it's only needed when NEURON_SERVER_MEDIA_BACKEND=s3.
# Install with:  pip install -e ".[server,s3]"
s3 = [
    "boto3>=1.34",               # S3-compatible object storage client
]

# End-to-end-encryption support (Megolm decryption). Requires the system libolm
# library to be installed (e.g. `apt-get install libolm-dev`).
# Install with:  pip install -e ".[e2e]"
e2e = [
    "python-olm>=3.1",           # Python bindings for libolm (Olm/Megolm)
]

# Neuron's own homeserver (`neuron_server`). Install with:  pip install -e ".[server]"
server = [
    "fastapi>=0.111,<1.0",       # ASGI framework for the Client-Server API + admin console
    "uvicorn[standard]>=0.30",   # ASGI server used to run the homeserver
    "python-multipart>=0.0.9",   # parse the /get-started + /console forms (request.form())
    "itsdangerous>=2.2",         # signs the admin-console session cookie (SessionMiddleware)
    "segno>=1.6",                # QR codes for shareable invite links in the console
    "webauthn>=2.0",             # passkey (WebAuthn) sign-in for the console
    "aiosqlite>=0.20",           # async SQLite driver (development backend)
    "asyncpg>=0.29",             # async PostgreSQL driver (production backend)
    "Pillow>=10.0",              # image thumbnailing for the media repository
    "PyNaCl>=1.5",               # Ed25519 server signing keys (federation, HS-7)
]

# The desktop app: run your own homeserver as an installed program. Wraps the
# `server` extra with a per-user data dir, first-run setup and a supervisor.
# Install with:  pipx install "neuron[desktop]"   (or  pip install -e ".[desktop]")
desktop = [
    "neuron[server]",            # the homeserver this app supervises
    "platformdirs>=4.0",         # per-user data directory across macOS/Windows/Linux
]

# The tray / menu-bar front-end (D2). Split out because it needs a desktop session
# and a GUI toolkit; the supervisor logic in `desktop` works headless without it.
# Install with:  pipx install "neuron[desktop-gui]"
desktop-gui = [
    "neuron[desktop]",
    "pystray>=0.19",             # cross-platform tray icon (macOS/Windows/Linux)
]

# Everything needed for development + CI (includes the service extras above so
# the whole codebase is importable and testable).
# Install with:  pip install -e ".[dev]"
dev = [
    "neuron[console]",           # pull in all service runtime deps
    "neuron[auditor]",           # boto3 for the S3 sink
    "neuron[e2e]",               # python-olm for E2EE decryption
    "neuron[server]",            # fastapi/uvicorn + DB drivers for neuron_server
    "neuron[desktop]",           # platformdirs for the desktop supervisor
    "pytest>=8.0",
    "pytest-asyncio>=0.23",      # lets us write async test functions
    "ruff>=0.5",                 # linter + formatter
    "mypy>=1.10",                # static type checker
    "types-PyYAML",              # type stubs for PyYAML (helps mypy)
]

[tool.hatch.build.targets.wheel]
# Tell the build tool which package(s) ship in the wheel. As we add services
# (neuron_gateway, neuron_auditor, ...) we list them here too.
packages = [
    "src/neuron_core",
    "src/neuron_console",
    "src/neuron_supervisor",
    "src/neuron_auditor",
    "src/neuron_crypto",
    "src/neuron_server",
    "src/neuron_desktop",
]

# ---------------------------------------------------------------------------
# Tooling configuration (kept in one place so `ruff`, `mypy`, `pytest` just work)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
# A friendly-but-useful rule set: pycodestyle (E), pyflakes (F), isort (I),
# bugbear (B), pyupgrade (UP). Easy to read for a beginner, catches real bugs.
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's documented style puts Depends()/Form() in parameter defaults, which
# is safe. Tell bugbear (B008) to treat these calls as immutable defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Form", "fastapi.Query"]

[tool.mypy]
python_version = "3.11"
packages = ["neuron_core", "neuron_console", "neuron_supervisor", "neuron_auditor", "neuron_crypto", "neuron_server", "neuron_desktop"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# These ship little/no type information; treat them as untyped.
#   boto3 — S3 sink; olm — libolm bindings for E2EE; aiosqlite/asyncpg — DB drivers;
#   segno — QR codes for console invite links.
module = ["boto3", "botocore.*", "olm", "aiosqlite", "asyncpg", "PIL", "PIL.*", "nacl", "nacl.*", "pystray", "pystray.*", "segno", "segno.*", "webauthn", "webauthn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# asyncio_mode = "auto" means we can write `async def test_...()` without extra
# decorators — pytest-asyncio runs them on an event loop automatically.
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
